<resources>
    <string name="app_name">Neon</string>
    <string name="welcome_neon">Welcome To Neon</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_signIn_btn">SIGN IN</string>
    <string name="login_create_account_btn">Create Account</string>
    <string name="login_facebook_btn">FaceBook</string>
    <string name="login_google_btn">Google</string>
    <string name="login_sign_in_with">Sign In With</string>
    <string name="enter_register_email">Enter Registered Email !</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_sign_in">Back To Sign In</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">739286266439662</string>
    <string name="fb_login_protocol_scheme">fb739286266439662</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_search_term">New Search Term</string>
    <string name="search_hint">type your text...</string>
</resources>
